# ShapeLib

./: CMakeLists.txt  README.md  Shapelib.cmake  main.cpp
Samples/: shapes.txt
